Fixed alignment of non-expandable topics.

--- a/Documentation/Styles/MonoGame/css/sharpdoc.css
+++ b/Documentation/Styles/MonoGame/css/sharpdoc.css
@@ -623,8 +623,8 @@
 .sharpdoc .composed .icon
 {
 	background-repeat:no-repeat;
-	height:15px;
-	width:13px;
+	height:16px;
+	width:16px;
 }
 
 .sharpdoc .composed.opened .icon
